<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.ioanap.classbook.SignInActivity">

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="493dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="Sign In" />

        <!-- or continue with -->
        <RelativeLayout
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="or continue with"
                android:textColor="@color/grey"
                android:textSize="10sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/tvText"
                android:background="@android:color/darker_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tvText"
                android:background="@android:color/darker_gray" />

        </RelativeLayout>

        <!-- Google sign in button -->
        <RelativeLayout
            android:id="@+id/button_google_sign_in"
            android:layout_width="212dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_google"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:scaleType="fitStart"
                android:src="@drawable/ic_google" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@+id/icon_google"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="Google" />

        </RelativeLayout>

        <!-- Facebook sign in button -->
        <RelativeLayout
            android:id="@+id/button_facebook_sign_in"
            android:layout_width="212dp"
            android:layout_height="35dp"
            android:background="#395692">

            <ImageView
                android:id="@+id/icon_facebook"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:scaleType="fitStart"
                android:src="@drawable/ic_facebook" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_toRightOf="@+id/icon_facebook"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="Facebook"
                android:textColor="@android:color/background_light" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_switch_to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Sign up"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

</RelativeLayout>
